[AOT] JVMTI ResourceExhausted event repeated for same allocation

XMLWordPrintable

    • b22
    • b15
    • x86_64
    • linux

      vm/jvmti/ResourceExhausted/resexh001/resexh00101/resexh00101(a) tests fail because event is triggered twice

      Please check comments section for steps to reproduce.

        1. HashMap.resize.asm.txt
          96 kB
          Vladimir Kozlov
        2. HashMap.resize.static.asm.txt
          87 kB
          Vladimir Kozlov
        3. resexh00101.jtr
          955 kB
          Ramesh Gangadhar
        4. resexh00101a.jtr
          1.21 MB
          Ramesh Gangadhar
        5. task_igor_build_modified.sh
          2 kB
          Ramesh Gangadhar

            Assignee:
            Douglas Simon
            Reporter:
            Ramesh Gangadhar
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: