8208686: [AOT] JVMTI ResourceExhausted event repeated for same allocation